# systemgmmkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_BACKUP_BEFORE_MERGE_ABORT.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  publish.yml
artifacts/joss/: README.md  joss_artifact_file_index.csv
artifacts/ml_workflow/: README.md  dynamic_panel.csv  forecast.csv  forecast_backtest.csv  gmm_grid_search.csv  model_comparison.csv  ols_predictions_residuals.csv  panel_cv_scores.csv  predictions_residuals.csv  static_panel.csv  summary.json  synthetic_panel.csv
artifacts/parity/: panel_econometrics_certification_report.md  strict_parity_results.csv  strict_parity_results.md
docs/: PRODUCTION.md  ROADMAP.md  gmm_lag_windows.md  ml_workflow.md
docs/parity/: system_gmm_parity_matrix.md
docs/security/: accepted-risks.md  dependency-review.md  release-integrity.md  socket-policy.md
docs/validation/: CONFORMANCE_ROADMAP.md
examples/: 00_quick_user_path.py  01_fixed_effects_quickstart.py  02_difference_gmm_quickstart.py  03_system_gmm_backend_auto.py  04_gmm_role_variable_lag_windows.py  05_static_panel_iv_workflow.py  06_dynamic_gmm_workflow.py  07_ml_forecast_search_workflow.py  08_postestimation_visualization_workflow.py  README.md  _shared_panel_data.py  aid_growth_usage.py  fe_and_gmm_usage.py  fe_re_iv_gmm_usage.py  ml_workflow_example.py  postestimation_graphics_demo.py  sgm_viz_demo.py  sgm_viz_result_integration_demo.py  sgm_viz_v2_demo.py  standard_postestimation_gallery_demo.py
examples/results/: 05_static_panel_iv_coefficients.csv  05_static_panel_iv_coefficients.md  05_static_panel_iv_confint.csv  05_static_panel_iv_confint.md  05_static_panel_iv_model_comparison.csv  05_static_panel_iv_model_comparison.md  05_static_panel_iv_postestimation.md  06_difference_gmm_native.md  06_dynamic_gmm_coefficients.csv  06_dynamic_gmm_coefficients.md  06_dynamic_gmm_diagnostics.csv  06_dynamic_gmm_diagnostics.md  06_system_gmm_model_card.md  06_system_gmm_native.md  07_gmm_diagnostic_first_search.csv  07_gmm_diagnostic_first_search.md  07_gmm_diagnostic_first_search_report.md  07_ml_forecast_backtest.csv  07_ml_forecast_backtest.md  07_ml_holdout_comparison.csv  07_ml_holdout_comparison.md  07_ml_one_step_forecast_head.csv  07_ml_one_step_forecast_head.md  07_ml_panel_cv_scores.csv  07_ml_panel_cv_scores.md  08_marginal_effects.csv  08_marginal_effects.md  08_postestimation_summary.md  README.md  fe_re_iv_gmm_usage_coefficients.md  fe_re_iv_gmm_usage_system_gmm_command.txt
paper/: add_repo_link_and_ai_disclosure.py  paper.bib  paper.md
requirements/: README.md  docs.in  docs.txt  release.in  release.txt  runtime.in  runtime.txt  test.in  test.txt
scripts/: apply_gmm_parity_policy.py  compare_fd001_realdata_ols_stata_058dev.py  inspect_dist.py  verify_dependencies.py
scripts/dev/: compare_realdata_lag_windows_native_vs_stata.py  compare_realdata_notime_fd_onestep_native_vs_stata.py  compare_realdata_notime_lag_window_native_vs_stata.py  compare_realdata_notime_onestep_native_vs_stata.py  force_patch_gmm_lag_prepare.py  generate_manual_stata_gmm_lag_window_parity.py  generate_realdata_gmm_lag_window_stata_do.py  generate_realdata_notime_lag_window_xtabond2.py  grid_fod_iv_instrument_offset.py  grid_fod_lagged_regressor_modes.py  grid_fod_scale_modes.py  grid_fod_start_pos_gmm_offset.py  grid_fod_start_positions.py  grid_fod_system_iv_z_modes_after_gmm_offset.py  grid_onestep_h1_ivmode_parity.py  guard_certified_xtabond2_parity.py  guard_custom_lag_native_parity_status.py  implement_gmm_lag_windows.py  patch_canonical_fod_transform.py  patch_dependent_lag_backward_compat.py  patch_fod_gmm_instrument_offset_mode.py  patch_fod_gmm_offset_default_1.py  patch_fod_iv_instrument_offset_mode.py  patch_fod_lagged_regressor_mode.py  patch_fod_scale_modes.py  patch_fod_start_pos_mode.py  patch_generator_overid_df_blocker.py  patch_gmm_lag_window_wrappers.py  patch_manual_stata_overid_df_blocker.py  patch_native_system_level_diff_lags.py  patch_notime_comparison_extractor.py  patch_production_fod_alignment.py  patch_row_meta_h1_mode.py  patch_scope_fod_offset_to_system_only.py  patch_transformed_error_terms_signature.py  write_lag_window_certification_report.py
scripts/ml/: run_ml_workflow_smoke.py
scripts/parity/: apply_xtabond2_system_gmm_certificate.py  build_certification_report.py  build_strict_parity_report.py  build_xtabond2_system_gmm_decomposition_controls_do.py  build_xtabond2_system_gmm_do.py  build_xtabond2_system_gmm_no_controls_do.py  calibrate_native_gmm_diagnostics.py  (+53 more)
tests/: test_apply_gmm_parity_policy_script.py  test_dynamic_gmm_hybrid_search.py  test_dynamic_panel_native_system_warning_language.py  test_easy_gmm_api.py  test_easy_gmm_lag_windows.py  test_easy_gmm_no_duplicate_lagged_dependent.py  test_easy_workflow_wrappers.py  test_first_difference_reporting.py  test_fixed_effects.py  test_generic_presets.py  test_gmm_lag_window_instrument_validation.py  test_gmm_lag_windows.py  test_gmm_parity_policy.py  test_ml_backtest.py  test_ml_forecast.py  test_ml_model_compare.py  test_ml_workflow.py  test_ml_workflow_integration.py  test_ml_workflow_smoke_script.py  test_ols_postestimation.py  test_optional_dependencies.py  test_parity_native_gmm.py  test_postestimation_graphics.py  test_pydynpd_backend.py  test_pydynpd_diagnostic_pvalues.py  test_pydynpd_output_parser.py  test_random_effects_iv_tables.py  test_result_plot_accessor.py  test_sgm_viz_v2.py  test_spec_command.py  test_standard_gallery.py  test_supply_chain.py  test_validation_diagnostics.py  test_xtabond2_system_gmm_decomposition_controls_certification.py  test_xtabond2_system_gmm_decomposition_controls_scaffold.py  test_xtabond2_system_gmm_no_controls_certification.py  test_xtabond2_system_gmm_no_controls_scaffold.py  test_xtabond2_system_gmm_parity.py  test_xtabond2_system_gmm_three_way_controls_certification.py  test_xtabond2_system_gmm_three_way_controls_scaffold.py  (+1 more)
(+529 files in other folders)
