[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemgmmkit"
version = "0.5.4"
description = "Generic panel-data econometrics workflow helpers for FE, RE, IV/2SLS, and Difference/System GMM in Python."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Oluwajuwon Mayomi Akanbi"}
]
keywords = ["econometrics", "panel-data", "fixed-effects", "random-effects", "panel-iv", "2sls", "system-gmm", "difference-gmm", "dynamic-panel", "arellano-bond", "blundell-bond", "stata", "xtabond2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
]


[project.urls]
Homepage = "https://github.com/Akanom/systemgmmkit"
Repository = "https://github.com/Akanom/systemgmmkit"
Issues = "https://github.com/Akanom/systemgmmkit/issues"

[project.optional-dependencies]
pydynpd = ["pydynpd>=0.2.2"]
fe = ["linearmodels>=5"]
reports = ["tabulate>=0.9"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10", "build>=1.2", "twine>=5"]
all = ["pydynpd>=0.2.2", "linearmodels>=5", "tabulate>=0.9"]

[project.scripts]
systemgmmkit = "systemgmmkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


