[build-system]
requires = ["setuptools>=68,<82", "wheel>=0.41,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "systemgmmkit"
version = "0.5.12"
description = "Panel-data econometrics workflows for OLS, FE, RE, IV/2SLS, Difference GMM, System GMM, diagnostics, post-estimation, visualization, and ML-style validation in Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Oluwajuwon Mayomi Akanbi" }
]
keywords = [
  "econometrics",
  "panel-data",
  "fixed-effects",
  "random-effects",
  "panel-iv",
  "2sls",
  "difference-gmm",
  "system-gmm",
  "dynamic-panel",
  "arellano-bond",
  "blundell-bond",
  "windmeijer",
  "stata",
  "xtabond2",
  "post-estimation",
  "forecasting",
  "panel-cross-validation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<4",
  "scipy>=1.9,<2",
]

[project.urls]
Homepage = "https://github.com/Akanom/systemgmmkit"
Repository = "https://github.com/Akanom/systemgmmkit"
Issues = "https://github.com/Akanom/systemgmmkit/issues"

[project.optional-dependencies]
pydynpd = ["pydynpd>=0.2.2,<1"]
fe = ["linearmodels>=5,<8"]
plots = ["matplotlib>=3.8,<4"]
reports = ["tabulate>=0.9,<1"]
dev = [
  "matplotlib>=3.8,<4",
  "pytest>=8,<10",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "build>=1.2,<2",
  "twine>=5,<7",
]
all = [
  "pydynpd>=0.2.2,<1",
  "linearmodels>=5,<8",
  "matplotlib>=3.8,<4",
  "tabulate>=0.9,<1",
]

[project.scripts]
systemgmmkit = "systemgmmkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = [
    "artifacts/joss",
]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "UP045"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "parity: marks tests that require external parity tooling or Stata-generated artifacts",
]
